# CSE471-final-project

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
include/glad/: glad.h
lib/: OpenAL32.lib
resource/model/: gorilla.mtl  magma_block.mtl
resource/model/character/: untitled7.mtl
resource/model/enemy/: thomas2.mtl
resource/model/floor/: floor2.mtl
resource/model/shotgun/: shotgun3.mtl
resource/model/wall/: wall.mtl  wall_new.mtl
resource/shader/: Axes.frag  Base.frag  Base.fs  Base.vert  Base.vs  Line.frag  Line.vert  Screen.frag  Screen.vert  Skybox.frag  Skybox.vert  Text.frag  Text.vert
src/: Controller.cpp  Controller.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Globals.hpp  Player.cpp  Player.hpp  ResourceManger.cpp  ResourceManger.hpp  Shooting.cpp  Shooting.hpp  Terrain.cpp  Terrain.hpp  Transform.hpp  ViewController.cpp  ViewController.hpp  glad.c  main.cpp
src/helper/: RootDir.h.in
src/physics/: Collider.hpp  Collision.hpp  Ray.hpp  RigidBody.hpp
src/rendering/: Image.hpp  Light.cpp  Light.hpp  Mesh.hpp  Mesh2.hpp  Model.hpp  Model2.hpp  Shader.hpp  Text.hpp  TextRenderer.hpp
